# lidar_cmn

./: .gitignore  404.html  README.md  index.html  lidar_cmn.code-workspace  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml_OLD  sitemap.xml
docs/: download.md  generic.md  index.md  tutorial.md  vector.md
download/: index.html
generic/: index.html
geodata/: README.md  lidar_cmn.qgz  limiti_amministrativi.gpkg  quadro_unione_lidar.gpkg
geodata/prov_na/: README.md  prov_na_2022.dbf  prov_na_2022.shp  prov_na_2022.shx  prov_na_2023.dbf  prov_na_2023.qmd  prov_na_2023.shp  prov_na_2023.shx
geodata/quadri_unione/: README.md
geodata/quadri_unione/quadro_unione_lidar_dsm/: quadro_unione_lidar_dsm.prj  quadro_unione_lidar_dsm.shp  wfsrequest.txt
geodata/quadri_unione/quadro_unione_lidar_dtm/: quadro_unione_lidar_dtm.shp  quadro_unione_lidar_dtm.shx  wfsrequest.txt
lidar_cmn/: config.py  download.py  generic.py  vector.py
notebooks/: download.ipynb
search/: search_index.json
test/: generic
tests/: download.py  generic.py  vector.py
tutorial/: index.html
vector/: index.html
