[tool.poetry]
name = "lidar-cmn"
version = "1.0.0"
description = "Python package che consente il download dei dati LiDAR di Città Metropolitana di Napoli"
authors = ["Massimiliano Moraca <info@massimilianomraca.it>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "lidar_cmn"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
