[tool.poetry]
name = "lidar-cmn"
version = "1.0.0"
description = "Python package che consente il download dei dati LiDAR di Città Metropolitana di Napoli"
authors = ["Massimiliano Moraca <info@massimilianomraca.it>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "lidar_cmn"}]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.12.2"
pyogrio = "^0.5.1"
fsspec = "^2023.4.0"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.6"
pygments = "^2.15.1"
mkdocstrings-python = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
documentation = 'https://maxdragonheart.github.io/lidar_cmn/'
repository = 'https://github.com/MaxDragonheart/lidar_cmn'